test/testdata/syntax_errors/illegal_char.lox
// syntaxerror
print 1 $ 2; // error: illegal character $
